--- a/src/index.html
+++ b/src/index.html
@@ -54,16 +54,17 @@
             <div class="row">
                 <div class="col-7 home__title">
                     <div>
-                        <h1 class="home__text" data-aos="fade-right"  data-aos-delay="100">Fresh Food</h1>
-                        <div class="home__content" data-aos="fade-right"  data-aos-delay="300">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio ducimus
+                        <h1 class="home__text" data-aos="fade-right" data-aos-delay="100">Fresh Food</h1>
+                        <div class="home__content" data-aos="fade-right" data-aos-delay="300">Lorem ipsum dolor sit amet
+                            consectetur adipisicing elit. Odio ducimus
                             nisi quo
                             officia repellendus eos. Consectetur repellat fugit tempora velit dignissimos, nam ut,
                             officia
                             ullam saepe
                             ducimus exercitationem voluptas incidunt!</div>
-                       <div data-aos="fade-right" data-aos-delay="500"> 
-                           <button class="home__button" >Order now</button>
-                    </div>
+                        <div data-aos="fade-right" data-aos-delay="500">
+                            <button class="home__button">Order now</button>
+                        </div>
                     </div>
                 </div>
                 <div class="col-5">
@@ -74,8 +75,8 @@
         </div>
 
     </section>
-    <!-- ABOUT CHUA ANIMATION--> 
-    <section class="about" id="about">
+    <!-- ABOUT CHUA ANIMATION-->
+    <!-- <section class="about" id="about">
         <div class="about__image">
             <img class="about__img" src="./assets/dan-gold-4_jhDO54BYg-unsplash.jpg" alt="about"
                 style="border-radius: 1.3rem;">
@@ -89,7 +90,7 @@
                 ipsa nemo possimus soluta est accusamus eum exercitationem nisi adipisci, pariatur, explicabo dolore,
                 reprehenderit esse fugiat sapiente eos veniam quae.</div>
         </div>
-    </section>
+    </section> -->
     <!-- FOOD MENU  -->
     <section class="bg-img bg-fix" id="menu"
         style="background-image: url(./assets/katherine-chase-4MMK78S7eyk-unsplash.jpg)">
@@ -102,35 +103,38 @@
                     nam ex cupiditate excepturi!
                 </p>
                 <div class="food-menu__category">
-                    <div data-aos="fade-right" data-aos-delay="100">
-                        <button class="active" data-filter="all">
-                            All food
-                        </button>
-                    </div>
-                    <div data-aos="fade-right" data-aos-delay="300">
-                        <button class="" data-filter=".salad">
-                            Salad
-                        </button>
-                    </div>
-                    <div data-aos="fade-right" data-aos-delay="500">
-                        <button class="" data-filter=".lorem">
-                            Lorem
-                        </button>
-                    </div>
-                    <div data-aos="fade-right" data-aos-delay="700">
-                        <button class="" data-filter=".ipsum">
-                            Ipsum
-                        </button>
-                    </div>
-                    <div data-aos="fade-right" data-aos-delay="900">
-                        <button class="" data-filter=".dolor">
-                            Dolor
-                        </button>
-                    </div>
+                    <ul class="food-menu__filter">
+                        <li data-aos="fade-right" data-aos-delay="100">
+                            <button class="active" data-filter="all">
+                                All food
+                            </button>
+                        </li>
+                        <li data-aos="fade-right" data-aos-delay="300">
+                            <button class="" data-filter=".salad">
+                                Salad
+                            </button>
+                        </li>
+                        <li data-aos="fade-right" data-aos-delay="500">
+                            <button class="" data-filter=".lorem">
+                                Lorem
+                            </button>
+                        </li>
+                        <li data-aos="fade-right" data-aos-delay="700">
+                            <button class="" data-filter=".ipsum">
+                                Ipsum
+                            </button>
+                        </li>
+                        <li data-aos="fade-right" data-aos-delay="900">
+                            <button class="" data-filter=".dolor">
+                                Dolor
+                            </button>
+                        </li>
+                    </ul>
                 </div>
                 <div class="food-menu__wrap">
                     <div class="row">
-                        <div class="col-3 mt-4 mix salad animate__animated animate__fadeInUp delay-1" >
+                        <div
+                            class="col-xl-3 col-lg-4 col-md-6 col-12 mt-4 mix salad animate__animated animate__fadeInUp delay-1">
                             <div class="food-menu__wrap--item salad-type">
                                 <div class="food-menu__wrap--img">
                                     <div class="wrap__img--hover">
@@ -149,7 +153,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3 mt-4 mix lorem animate__animated animate__fadeInUp delay-2" >
+                        <div
+                            class="col-xl-3 col-lg-4 col-md-6 col-12 mt-4 mix lorem animate__animated animate__fadeInUp delay-2">
                             <div class="food-menu__wrap--item lorem-type ">
                                 <div class="food-menu__wrap--img">
                                     <div class="wrap__img--hover ">
@@ -167,7 +172,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3 mt-4 mix ipsum animate__animated animate__fadeInUp delay-3" >
+                        <div
+                            class="col-xl-3 col-lg-4 col-md-6 col-12 mt-4 mix ipsum animate__animated animate__fadeInUp delay-3">
                             <div class="food-menu__wrap--item ipsum-type">
                                 <div class="food-menu__wrap--img ">
                                     <div class="wrap__img--hover bg-img-ipsum ">
@@ -185,7 +191,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3 mt-4 mix lorem animate__animated animate__fadeInUp delay-4" >
+                        <div
+                            class="col-xl-3 col-lg-4 col-md-6 col-12 mt-4 mix lorem animate__animated animate__fadeInUp delay-4">
                             <div class="food-menu__wrap--item lorem-type">
                                 <div class="food-menu__wrap--img">
                                     <div class="wrap__img--hover ">
@@ -203,7 +210,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3 mt-4 mix dolor animate__animated animate__fadeInUp delay-5" >
+                        <div
+                            class="col-xl-3 col-lg-4 col-md-6 col-12 mt-4 mix dolor animate__animated animate__fadeInUp delay-5">
                             <div class="food-menu__wrap--item dolor-type">
                                 <div class="food-menu__wrap--img ">
                                     <div class="wrap__img--hover bg-img-dolor ">
@@ -221,7 +229,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3 mt-4  mix salad animate__animated animate__fadeInUp delay-6" >
+                        <div
+                            class="col-xl-3 col-lg-4 col-md-6 col-12 mt-4  mix salad animate__animated animate__fadeInUp delay-6">
                             <div class="food-menu__wrap--item salad-type">
                                 <div class="food-menu__wrap--img">
                                     <div class="wrap__img--hover">
@@ -239,7 +248,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3 mt-4 mix ipsum animate__animated animate__fadeInUp delay-7">
+                        <div
+                            class="col-xl-3 col-lg-4 col-md-6 col-12 mt-4 mix ipsum animate__animated animate__fadeInUp delay-7">
                             <div class="food-menu__wrap--item ipsum-type">
                                 <div class="food-menu__wrap--img">
                                     <div class="wrap__img--hover bg-img-ipsum">
@@ -257,7 +267,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3 mt-4 mix dolor animate__animated animate__fadeInUp delay-8" >
+                        <div
+                            class="col-xl-3 col-lg-4 col-md-6 col-12 mt-4 mix dolor animate__animated animate__fadeInUp delay-8">
                             <div class="food-menu__wrap--item dolor-type">
                                 <div class="food-menu__wrap--img">
                                     <div class="wrap__img--hover bg-img-dolor">
@@ -284,7 +295,7 @@
     <section id="testimonial">
         <div class="container">
             <div class="row">
-                <div class="col-4" data-aos="zoom-in-up">
+                <div class="col-md-4" data-aos="zoom-in-up" data-aos-delay="100">
                     <div class="feedback__wrap">
                         <div class="feedback__content">
                             <p class="feedback__title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
@@ -308,7 +319,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4" data-aos="zoom-in-up">
+                <div class="col-md-4" data-aos="zoom-in-up">
                     <div class="feedback__wrap active ">
                         <div class="feedback__content">
                             <p class="feedback__title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
@@ -332,7 +343,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4" data-aos="zoom-in-up">
+                <div class="col-md-4" data-aos="zoom-in-up" data-aos-delay="100">
                     <div class="feedback__wrap ">
                         <div class="feedback__content">
                             <p class="feedback__title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
@@ -363,7 +374,7 @@
     <footer class="footer bg-img" style="background-image: url(./assets/nordwood-themes-pYWrdKO5ksI-unsplash.jpg)">
         <div class="container">
             <div class="row">
-                <div class="col-6 footer__detail">
+                <div class="col-xl-6 col-md-5 col-12 footer__detail">
                     <h1>Freshfood</h1>
                     <br>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae, quas explicabo, ut
@@ -374,7 +385,7 @@
                     <p>Phone: +00 123 456 789</p>
                     <p>Website: freshfood.com</p>
                 </div>
-                <div class="col-2 footer__detail">
+                <div class="col-xl-2 col-md-2 col-12 footer__detail">
                     <h1>About</h1>
                     <br>
                     <p>
@@ -390,7 +401,7 @@
                         <a href="#">Contact</a>
                     </p>
                 </div>
-                <div class="col-4 footer__detail">
+                <div class="col-xl-4 col-md-5 col-12 footer__detail">
                     <h1>Subscribe & media</h1>
                     <br>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam ipsum, delectus tempora dolore ex
