--- a/src/index.html
+++ b/src/index.html
@@ -37,13 +37,12 @@
     <header class="header">
         <div class="container">
             <a class="header__logo" href="">Freshfood</a>
-            <ul class="header__menu">
+            <ul class="header__menu ">
                 <li class="header__menu--item active"><a class="header__menu--link" href="#home">Home</a></li>
                 <li class="header__menu--item"><a class="header__menu--link" href="#about">About</a></li>
                 <li class="header__menu--item"><a class="header__menu--link" href="#menu">Menu</a></li>
-                <li class="header__menu--item"><a class="header__menu--link" href="#testimonial">Testimonials</a></li>
+                <li class="header__menu--item"><a class="header__menu--link" href="#testimonials">Testimonials</a></li>
             </ul>
-
             <div class="header__cart"><i class='bx bx-cart-alt'></i> </div>
         </div>
     </header>
@@ -52,45 +51,48 @@
         id="home">
         <div class="container">
             <div class="row">
-                <div class="col-7 home__title">
-                    <div>
-                        <h1 class="home__text" data-aos="fade-right" data-aos-delay="100">Fresh Food</h1>
-                        <div class="home__content" data-aos="fade-right" data-aos-delay="300">Lorem ipsum dolor sit amet
-                            consectetur adipisicing elit. Odio ducimus
-                            nisi quo
-                            officia repellendus eos. Consectetur repellat fugit tempora velit dignissimos, nam ut,
-                            officia
-                            ullam saepe
-                            ducimus exercitationem voluptas incidunt!</div>
-                        <div data-aos="fade-right" data-aos-delay="500">
-                            <button class="home__button">Order now</button>
-                        </div>
+                <div class="home__title col-6  col-xs-12">
+                    <h1 class="home__text" data-aos="fade-right" data-aos-delay="100">Fresh Food</h1>
+                    <div class="home__content" data-aos="fade-right" data-aos-delay="300">Lorem ipsum dolor sit amet
+                        consectetur adipisicing elit. Odio ducimus
+                        nisi quo
+                        officia repellendus eos. Consectetur repellat fugit tempora velit dignissimos, nam ut, officia
+                        ullam saepe
+                        ducimus exercitationem voluptas incidunt!</div>
+                    <div data-aos="fade-right" data-aos-delay="500">
+                        <button class="home__button">Order now</button>
                     </div>
                 </div>
-                <div class="col-5">
-
+            </div>
+        </div>
+    </section>
+    <!-- ABOUT -->
+    <section class="about" id="about">
+        <div class="container">
+            <div class="row ">
+                <div class="col-xl-5 col-lg-7 col-md-6 col-xs-12 ">
+                    <div class="about__image ">
+                        <img class="about__img" src="./assets/dan-gold-4_jhDO54BYg-unsplash.jpg" alt="about"
+                            style="border-radius: 1.3rem;">
+                    </div>
+                </div>
+                <div class="col-xl-7 col-lg-5 col-md-6 col-xs-12 about__wrap">
+                    <div class="about__content">
+                        <h2 class="about__content--title"><span class="about__tittle--color">We</span> create <span
+                                class="about__tittle--color">delicious</span> memories for <span
+                                class="about__tittle--color">you</span>
+                        </h2>
+                        <div class="about__content--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
+                            mollitia
+                            ipsa nemo possimus soluta est accusamus eum exercitationem nisi adipisci, pariatur,
+                            explicabo
+                            dolore,
+                            reprehenderit esse fugiat sapiente eos veniam quae.</div>
+                    </div>
                 </div>
             </div>
-
         </div>
-
     </section>
-    <!-- ABOUT CHUA ANIMATION-->
-    <!-- <section class="about" id="about">
-        <div class="about__image">
-            <img class="about__img" src="./assets/dan-gold-4_jhDO54BYg-unsplash.jpg" alt="about"
-                style="border-radius: 1.3rem;">
-        </div>
-        <div class="about__content">
-            <h2 class="about__content--title"><span class="about__tittle--color">We</span> create <span
-                    class="about__tittle--color">delicious</span> memories for <span
-                    class="about__tittle--color">you</span>
-            </h2>
-            <div class="about__content--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni mollitia
-                ipsa nemo possimus soluta est accusamus eum exercitationem nisi adipisci, pariatur, explicabo dolore,
-                reprehenderit esse fugiat sapiente eos veniam quae.</div>
-        </div>
-    </section> -->
     <!-- FOOD MENU  -->
     <section class="bg-img bg-fix" id="menu"
         style="background-image: url(./assets/katherine-chase-4MMK78S7eyk-unsplash.jpg)">
