--- a/src/index.html
+++ b/src/index.html
@@ -96,19 +96,20 @@
     <section class="about" id="about">
         <div class="container">
             <div class="row ">
-                <div class="col-xl-5 col-lg-7 col-md-7 col-xs-12 " data-aos="fade-right">
+                <div class="col-xl-5 col-lg-7 col-md-7 col-xs-12 animate__animated animate__fadeInLeft">
                     <div class="about__image ">
                         <img class="about__img" src="./assets/dan-gold-4_jhDO54BYg-unsplash.jpg" alt="about"
                             style="border-radius: 1.3rem;">
                     </div>
                 </div>
-                <div class="col-xl-7 col-lg-5 col-md-5 col-xs-12 about__wrap" data-aos="fade-left">
-                    <div class="about__content">
+                <div class="col-xl-7 col-lg-5 col-md-5 col-xs-12 about__wrap animate__animated animate__fadeInRight">
+                    <div class="about__content ">
                         <h2 class="about__content--title"><span class="about__tittle--color">We</span> create <span
                                 class="about__tittle--color">delicious</span> memories for <span
                                 class="about__tittle--color">you</span>
                         </h2>
-                        <div class="about__content--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
+                        <div class="about__content--text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Magni
                             mollitia
                             ipsa nemo possimus soluta est accusamus eum exercitationem nisi adipisci, pariatur,
                             explicabo
