--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
         </div>
     </header>
     <!-- HOME -->
-    <section class="home bg-img bg-fix" style="background-image: url(./src/public/assets/brooke-lark-08bOYnH_r_E-unsplash.jpg)"
-        id="home">
+    <section class="home bg-img bg-fix"style="background-image: url(./src/public/assets/brooke-lark-08bOYnH_r_E-unsplash.jpg)" id="home">
         <div class="container">
             <div class="row">
                 <div class="home__title col-6  col-xs-12">
@@ -401,7 +400,8 @@
         </div>
     </section>
     <!-- FOOTER  -->
-    <footer class="footer bg-img" style="background-image: url(./src/public/assets/nordwood-themes-pYWrdKO5ksI-unsplash.jpg)">
+    <footer class="footer bg-img"
+        style="background-image: url(./src/public/assets/nordwood-themes-pYWrdKO5ksI-unsplash.jpg)">
         <div class="container">
             <div class="row">
                 <div class="col-xl-6 col-md-5 col-12 footer__detail">
